kuber-homeworks/1.5/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: appfront
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appfront
  template:
    metadata:
      labels:
        app: appfront
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
