kuber-homeworks/1.5/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-back
spec:
  ports:
    - name: nvc-back
      port: 80
  selector:
    app: back
  type: ClusterIP
