kuber-homeworks/1.5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-front
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-back
            port:
              number: 80
